--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,12 @@
 @use './styles/reset';
 
 html {
-  font-size: 62.5%;
+  font-size: 16px;
 }
 
 #root {
   font-family: 'Be Vietnam Pro', sans-serif;
   font-weight: normal;
   min-height: 100vh;
+  font-size: 1rem;
 }
