--- a/src/styles/Resume.module.scss
+++ b/src/styles/Resume.module.scss
@@ -1,5 +1,24 @@
 .resume {
   flex: 1;
+  max-width: 60%;
   background-color: #f6f6f6;
   padding: 30px;
+
+  .body {
+    display: flex;
+    gap: 50px;
+
+    .left,
+    .right {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+    .left {
+      flex: 1;
+    }
+    .right {
+      flex: 2;
+    }
+  }
 }
